results/SVCOMP/conversational/log-ExSymExe18-2024_03_11_16_24_07.txt
class Main {
  static int field;
  static int field2;

  //@ ensures \result ==> field == 9 && (\forall Main inst; inst.field == 9) && (\forall Main inst; inst.field2 == 0);
  public static boolean f() {
    int x = 3;
    Main inst = new Main();
    field = 9;
    return inst.test(x, field, field2);
  }
  
  //@ requires r == 0;
  //@ ensures \result ==> x == 9 && z == 81 && r == 9;
  //@ ensures !\result ==> z > x && x <= r;
  public boolean test(int x, int z, int r) {
    System.out.println("Testing ExSymExe18");
    int y = 3;
    x = x * r;
    z = z * x;
    r = y * x;
    if (z > x) {
      System.out.println("branch FOO1");
      return false;
    } else System.out.println("branch FOO2");
    if (x > r) System.out.println("branch BOO1");
    else System.out.println("branch BOO2");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe18.java:5: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result ==> field == 9 && (\forall Main inst; inst.field == 9) && (\forall Main inst; inst.field2 == 0);
                          ^
/home/max/Documents/JMLGPT/tmp/ExSymExe18.java:5: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result ==> field == 9 && (\forall Main inst; inst.field == 9) && (\forall Main inst; inst.field2 == 0);
                                                                ^
/home/max/Documents/JMLGPT/tmp/ExSymExe18.java:5: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result ==> field == 9 && (\forall Main inst; inst.field == 9) && (\forall Main inst; inst.field2 == 0);
                                                                                                        ^
3 errors

class Main {
  //@ spec_public
  static int field;
  //@ spec_public
  static int field2;

  //@ ensures \result ==> field == 9 && (\forall Main inst; inst.field == 9) && (\forall Main inst; inst.field2 == 0);
  public static boolean f() {
    int x = 3;
    Main inst = new Main();
    field = 9;
    return inst.test(x, field, field2);
  }
  
  //@ requires r == 0;
  //@ ensures \result ==> x == 9 && z == 81 && r == 9;
  //@ ensures !\result ==> z > x && x <= r;
  public boolean test(int x, int z, int r) {
    System.out.println("Testing ExSymExe18");
    int y = 3;
    x = x * r;
    z = z * x;
    r = y * x;
    if (z > x) {
      System.out.println("branch FOO1");
      return false;
    } else System.out.println("branch FOO2");
    if (x > r) System.out.println("branch BOO1");
    else System.out.println("branch BOO2");
    return true;
  }
}
